# BooruGtk

./: .gitignore  api.vala  build.sh  io.github.chaoticdev.BooruGtk.json  main.vala  meson.build  run.sh
data/: io.github.chaoticdev.BooruGtk.appdata.xml.in  io.github.chaoticdev.BooruGtk.desktop.in  io.github.chaoticdev.BooruGtk.gschema.xml  meson.build
po/: POTFILES  meson.build
scripts/: build.sh  run.sh
src/: ApplicationHeader.vala  MediaDisplay.vala  api.vala  boorugtk.gresource.xml  cache.vala  main.vala  meson.build  queue.vala  window.ui  window.vala
src/api/: post.vala  query.vala
